GHERKIN SALAD RELEASE NOTES
===========================

===========================
1.4
- Refactor: Moved some code around to appropriate packages
- RadioButtonGroup functionality and tests updated. should* methods remain.
- Ability to create our own reporting modules with a default html reporter
- MultiSelectDropDown functionality and tests added. should* methods remain.
- CheckBoxGroup functionality and tests updated. should* methods remain.
- TextArea functionality and tests updated. should* methods remain.
- TextField functionality and tests updated. should* methods remain.
- has_all_these, has_any_of_these methods on Strings added and updated
- Default Dropdown functionality all updated. should* methods remain.
===========================
1.3
- should* methods in Strings prints error and action messages as appropriate
- Default implementation of isDisplayed and isEnabled moved to BaseBrowserElement
- TextArea - Pending methods added
- TextArea - More info and action messages added
- The default implementations around should / should not displayed / enabled now print action messages of verification
===========================
1.2
- flag in properties file to auto validate positions and css. This is because the auto validation is not completely implemented.
- jqueryui - Select Menu implementation
===========================
1.1
- Take the browser fully qualified name from properties file and use it to instantiate
- Reporting updates so that the js, css files are not needed in every project. loading from classpath
===========================