@@ -9,9 +9,9 @@ import daveayan.gherkinsalad.Strings;
 import daveayan.gherkinsalad.components.core.Component;
 import daveayan.gherkinsalad.components.core.Element;
 import daveayan.gherkinsalad.components.core.Elements;
-import daveayan.gherkinsalad.components.html.MultiSelectable;
+import daveayan.gherkinsalad.components.html.MultiOptionSelectable;
 
-public class CheckBoxGroup extends Component implements MultiSelectable {
+public class CheckBoxGroup extends Component implements MultiOptionSelectable {
 
 	public static CheckBoxGroup find(By locator) {
 		CheckBoxGroup cbg = new CheckBoxGroup();
